Migrate to JSpecify annotations for nullability constraints.
Closes #3170